# vphone-cli

linux/: .gitignore  BOOT-RESULT.md  BUILD.md  GPU.md  INFERNO-SPRINGBOARD-RUNBOOK.md  NETWORKING.md  README.md  pyproject.toml  requirements.txt
linux/inferno/: 00-use-prebuilt.sh  01-build-inferno.sh  02-extract-firmware.sh  03-run-companion-vm.sh  03b-setup-companion-tools.sh  04-run-main-vm.sh  README.md  idevicerestore.patch  pack-restored.sh
linux/vphone_linux/: __init__.py  backends.py  bootcmd.py  cli.py  config.py  device.py  disks.py  display.py  ipsw.py  network.py  qemu_build.py  runner.py  util.py  webgui.py
scripts/: cfw_install_exp.sh
scripts/patchers/: cfw.py
sources/FirmwarePatcher/IBoot/: IBootPatcher.swift
